--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get:
   google_fonts:
+  firebase_core:
+  firebase_auth: ^4.6.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
