--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   get:
   google_fonts:
   firebase_core:
+  google_sign_in:
   firebase_auth: ^4.6.1
+  cloud_functions:
 dev_dependencies:
   flutter_test:
     sdk: flutter
