--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.5
   google_fonts: ^3.0.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
