--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.2.0
+  flutter_screenutil: ^4.0.4
   cloud_firestore:
 
   # The following adds the Cupertino Icons font to your application.
