--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_secure_storage: any
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.2.0
-  flutter_screenutil: ^5.9.0
+  flutter_screenutil: ^5.8.4
   cloud_firestore:
   
 
