--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^4.6.1
   cloud_functions:
   equatable:
+  flutter_screenutil: ^5.8.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
