--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   firebase_auth: ^4.6.1
   cloud_functions:
   equatable:
-  flutter_screenutil: ^5.8.4
+  flutter_screenutil:
   firebase_messaging:
 dev_dependencies:
   flutter_test:
