last commit on dev

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.2.0
-  flutter_screenutil: ^5.8.4
   cloud_firestore:
   
 
@@ -43,7 +42,7 @@ dependencies:
   # google_fonts: ^3.0.1
   intl: ^0.18.1
   get:
-  google_fonts:
+  google_fonts: ^5.1.0
   firebase_core:
   google_sign_in:
   flutter_facebook_auth:
