--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cloud_functions:
   equatable:
   firebase_messaging:
+  flutter_screenutil: ^5.8.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
