--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,8 @@ dependencies:
   flutter_facebook_auth:
   firebase_auth: ^4.6.1
   cloud_functions:
-  flutter_screenutil:
   equatable:
-  firebase_messaging:
+  firebase_messaging: ^14.6.5
   flutter_screenutil: ^5.8.4
 dev_dependencies:
   flutter_test:
