--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   flutter_facebook_auth:
   firebase_auth: ^4.6.1
   cloud_functions:
-  flutter_screenutil:
+  # flutter_screenutil:
   equatable:
   firebase_messaging:
   flutter_screenutil: ^5.8.4
