--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,5 +70,9 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.facebook.android:facebook-login:latest.release'
+   /* implementation("com.facebook.android:facebook-android-sdk:14.1.1") {
+        because("Social Media Login integration")
+    }*/
+    implementation 'com.facebook.android:facebook-android-sdk:8.0.0'
 
 }
