--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.5
-  # google_fonts: ^3.0.1
+  liquid_pull_to_refresh: ^3.0.1
   intl: ^0.18.1
   get:
   google_fonts:
