--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
            </intent-filter>
         </activity>
 
-       <!-- Don't delete the meta-data below.
+       <!-- Don't delete the meta-data below
             This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
